libobs cmake's: Add Protocol API

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -414,6 +414,7 @@ set(libobs_libobs_SOURCES
 	${libobs_PLATFORM_SOURCES}
 	obs-audio-controls.c
 	obs-avc.c
+	obs-protocol.c
 	obs-encoder.c
 	obs-service.c
 	obs-source.c
@@ -453,6 +454,7 @@ set(libobs_libobs_HEADERS
 	obs-audio-controls.h
 	obs-defs.h
 	obs-avc.h
+	obs-protocol.h
 	obs-encoder.h
 	obs-service.h
 	obs-internal.h
